--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,26 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
   // display: flex;
-  background-color: #333;
+  background-color: #0D0D0D;
+  background: linear-gradient(to right, #0a0914, #151229) no-repeat center center fixed;
   color: #ccc;
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
 }
 
 header {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  background-color: orangered;
+  background: linear-gradient(to right, #ff0800, orangered);
+
+  margin-bottom: 12px;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.6);
+
+  .title {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 0 2%;
+
+
+    h1 {
+      font-size: 2.5em;
+      color: #1c1837;
+      margin: 12px 0 6px;
+    }
+
+    p {
+      margin: 6px 0 12px;
+      font-size: 1.2em;
+      color: #1c1837;
+    }
+  }
+
+  .menu {
+    margin-left: auto;
+  }
+}
+
+#output {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  // padding: 20px;
   text-align: center;
-  padding: 20px;
-  background-color: #444;
-
-  h1 {
-    margin: 0;
-    font-size: 2.5em;
-  }
-
-  p {
-    margin: 5px 0 0;
-    font-size: 1.2em;
-  }
+  color: rebeccapurple;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
+  font: italic bolder 3em 'Roboto', sans-serif;
 }
 
 section {
@@ -49,7 +91,7 @@ section {
 footer {
   text-align: center;
   padding: 10px;
-  background-color: #444;
+  background-color: #0D0D0D;
   border-top: 1px solid #555;
 
   p {
