--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,32 +20,66 @@ body {
 }
 
 header {
+  z-index: 2;
   display: flex;
   justify-content: flex-start;
   width: 100%;
   background-color: orangered;
   background: linear-gradient(to right, #ff0800, orangered);
 
-  margin-bottom: 12px;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.6);
+  margin-bottom: 22px;
+  
+  border-bottom: 1px solid #f00800;
+  box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.2);
 
-  .title {
+  .title-box {
     display: flex;
-    flex-direction: column;
-    flex: 1;
-    padding: 0 2%;
+    flex-direction: row;
 
-
-    h1 {
-      font-size: 2.5em;
-      color: #1c1837;
-      margin: 12px 0 6px;
+    @media (max-width: 200px) {
+      flex-direction: column;
     }
 
-    p {
-      margin: 6px 0 12px;
-      font-size: 1.2em;
-      color: #1c1837;
+    .img-box {
+      margin: 12px 0 12px max(2%, 12px);
+
+      .profile-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 80px;
+        max-height: 80px;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        box-shadow: 0 0 3px 5px rgba(0, 0, 0, 0.2);
+        overflow: hidden;
+
+        img {
+          width: 100%;
+          height: auto;
+          object-fit: cover;
+        }
+      }
+    }
+
+    .title {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      padding: 0 max(2%, 12px);
+
+
+      h1 {
+        font-size: 2.5em;
+        color: #1c1837;
+        margin: 12px 0 6px;
+      }
+
+      p {
+        margin: 6px 0 12px;
+        font-size: 1.2em;
+        color: #1c1837;
+      }
     }
   }
 
@@ -54,15 +88,42 @@ header {
   }
 }
 
-#output {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  // padding: 20px;
-  text-align: center;
-  color: rebeccapurple;
-  text-shadow: 0 0 2px rgba(0, 0, 0, 0.6);
-  font: italic bolder 3em 'Roboto', sans-serif;
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/wave.jpg");
+
+  z-index: -1;
+  margin-top: -22px;
+  height: 50%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+  #output {
+    text-align: center;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+
+    text-shadow: 
+      0 0 3px rgba(0, 0, 0, 0.9),
+      0 0 10px rgba(0, 0, 0, 0.5);
+    font: italic bolder max(6vmin, 20px) 'Roboto', sans-serif;
+
+    .hero-text {
+      margin: 0;
+      color: white;
+
+    }
+
+
+    @media (max-width: 820px) {
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
 
 section {
