--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -88,44 +88,6 @@ header {
   }
 }
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/wave.jpg");
-
-  z-index: -1;
-  margin-top: -22px;
-  height: 50%;
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-
-  #output {
-    text-align: center;
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    transform: translate(-50%, -50%);
-
-    text-shadow: 
-      0 0 3px rgba(0, 0, 0, 0.9),
-      0 0 10px rgba(0, 0, 0, 0.5);
-    font: italic bolder max(6vmin, 20px) 'Roboto', sans-serif;
-
-    .hero-text {
-      margin: 0;
-      color: white;
-
-    }
-
-
-    @media (max-width: 820px) {
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-  }
-}
-
 section {
   padding: 20px;
   border-bottom: 1px solid #555;
@@ -146,6 +108,62 @@ section {
     li {
       margin: 5px 0;
     }
+  }
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/wave.jpg");
+
+  z-index: -1;
+  margin-top: -22px;
+  height: 50%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+  #output {
+    text-align: center;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+
+    text-shadow: 
+      0 0 3px rgba(0, 0, 0, 0.9),
+      0 0 10px rgba(0, 0, 0, 0.5);
+    font: italic bolder max(6vmin, 20px) 'Roboto', sans-serif;
+
+    .hero-text {
+      margin: 0;
+      color: white;
+    }
+
+    @media (max-width: 820px) {
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+
+.resume-card {
+  background-color: #f0f0f0;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  margin: 20px auto;
+  // min-width: 560px;
+  width: 60%;
+
+  h2, h3 {
+    color: #1c1837;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .resume-card {
+    width: calc(100% - 40px);
+    // min-width: 100%;
   }
 }
 
